# ai-powered-file-storage

./: .dockerignore  .env.example  .gitignore  ENVIRONMENT_VARIABLES.md  FINAL_INTEGRATION_STATUS.md  IMPLEMENTATION_STATUS.md  MULTI_PROTOCOL_GUIDE.md  Makefile  README.md  README_UPDATE.md  TESTING.md  docker-compose.multi-protocol.yml  docker-compose.rust.yml  docker-compose.yml
.github/workflows/: test.yml
docs/: architecture-explained.md
nginx/: nginx.conf
scripts/: test_complete_implementation.py  test_rust_integration.rb
services/agent/: Dockerfile  Dockerfile.test  README.md  agent.py  cli.py  config.json  config.template.json  main.py  pytest.ini  requirements-test.txt  requirements.txt  run_tests.py  server.py  storage_client.py
services/agent/core/: action_executor.py  decision_engine.py  event_consumer.py  notification_dispatcher.py
services/agent/models/: decisions.py  events.py
services/agent/templates/: download_spike.jinja2  public_bucket_detected.jinja2
services/agent/tests/: __init__.py  conftest.py  test_action_executor.py  test_agent.py  test_cli.py  test_decision_engine.py  test_download_flow.py  test_event_consumer.py  test_notification_dispatcher.py  test_server.py  (+1 more)
services/chunk-gateway/: Cargo.toml  Dockerfile  README.md
services/chunk-gateway/benches/: chunking.rs
services/chunk-gateway/src/: auth.rs  chunker.rs  errors.rs  events.rs  handlers.rs  main.rs  metrics.rs  models.rs  rate_limit.rs  storage.rs  utils.rs
services/chunk-gateway/src/auth/: tests.rs
services/chunk-gateway/src/metrics/: tests.rs
services/chunk-gateway/src/storage/: tests.rs
services/chunk-gateway/tests/: handler_tests.rs  integration_tests.rs  test_config.rs
services/common/: access_log.py  auth.py  embed.py  phi_crypto.py  policy.py  redaction.py  redis_queue.py  tenant.py
services/mcp-server/: Dockerfile  README.md  main.py  pytest.ini  requirements-test.txt  run_tests.py
services/notification-service/: Dockerfile  main.py  requirements.txt
services/outbox-worker/: Dockerfile  requirements.txt  worker.py
services/storage-control-plane/: Dockerfile  Dockerfile.simple  Dockerfile.test  Gemfile  Makefile  Rakefile  TESTING.md
services/storage-ui/: Dockerfile  LINT_FIXES.md  README-SETUP.md  SECURITY_GUIDE.md  TESTING_GUIDE.md  angular.json  karma.conf.js  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
(+139 files in other folders)
