[package]
name = "chunk-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
 axum = { version = "0.7", features = ["macros"] }
 tokio = { version = "1.37", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 jsonwebtoken = "9"
 sha2 = "0.10"
 hex = "0.4"
 thiserror = "1.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tower-http = { version = "0.5", features = ["trace"] }
 chrono = { version = "0.4", features = ["serde"] }
